# JetsonTest

./: PeArduino.ino  config_infer_primary_yolo.txt  deepstream_yolo.py  package.xml  serial_node.py  setup.py  web_server.py
