<?xml version="1.0"?>
<package format="3">
  <name>arduino_serial_comm</name>
  <version>0.1.0</version>
  <description>ROS 2 package for Arduino serial communication</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
